--- a/infohashes.env
+++ b/infohashes.env
@@ -1,1 +1,2 @@
-
+# one per line, format: APP_NAME={"origin":"ORIGIN","hash":"INFOHAHS"}
+sekvens.buro.earth={"origin":"sekvens.buro.earth","hash":"316e3671346a33313236366835633337326f3674"}
